# primes-data-collection

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: calice.c  ceve.c  collectdata.c  common.c  common.h  salice.c  seve.c
